- Voucher Unhide - Change POST method create Assets - Voucher Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,6 +340,7 @@
         <item>500cc</item>
         <item>1000cc</item>
         <item>1500cc</item>
+        <item>2000cc</item>
         <item>2500cc</item>
         <item>3000cc</item>
         <item>3500cc</item>
